update api and api spec
